# newServidorAPI

./: .env  .gitignore  README.md  main.py  pyproject.toml
controller/: advogadoController.py  contatoController.py  enderecoController.py  escritorioController.py  healthCheckController.py
database/: database.py  dbConnectionHandler.py
models/: advogados.py  advogadosModel.py  contatoModel.py  enderecoModel.py  escritoriosModel.py
repository/: advogadoRep.py  contatoRep.py  enderecoRep.py  escritorioRep.py
src/controller/: advogadoController.py  contatoController.py  enderecoController.py  escritorioController.py  healthCheckController.py  prevAuthController.py
src/database/: dbConnectionHandler.py
src/models/: advogadosModel.py  contatoModel.py  enderecoModel.py  escritoriosModel.py  healthCheck.py  prevAuth.py  trocaSenhaModel.py
src/repository/: advogadoRep.py  contatoRep.py  enderecoRep.py  escritorioRep.py  prevAuthRep.py
src/utils/: datetimeUtils.py  helpers.py  validators.py
src/utils/enums/: authEnums.py  exceptionCodesEnums.py  logEnums.py  loginEnums.py
tests/: test_advogadoController.py  test_healthCheck.py
tests/controllers/: test_advogadoController.py  test_enderecoController.py  test_escritorioController.py  test_healthCheck.py
utils/: helpers.py  imageManager.py  validators.py
utils/enums/: authEnums.py  conexoes.py  imgManipulacaoEnum.py  prevEnums.py
