[tool.poetry]
name = "newservidorapi"
version = "0.1.0"
description = "API REST que será consumida por todas as aplicações do NewPrev"
authors = ["Israel Alves <israel.usp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
SQLAlchemy = "^2.0.29"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.0"
sqlalchemy-utils = "^0.41.2"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "python -m pytest tests/"
